tests/NormalTests/paczka1/small_fuzzy/98744486.err
Error in line 4: w3ymak A460 41,5
Error in line 12: GK22QS A460 64,9
